Account pages overlap fixed
Square-form and rect-form height increased

--- a/P02_2/css/main.css
+++ b/P02_2/css/main.css
@@ -243,7 +243,7 @@ ________________________________________________________________________________
 .square-form {
 	display: inline-block;
 	width: 45rem;
-	height: 50rem;
+	height: 60rem;
 	border: 0.5px solid rgb(124,147,157);
 	background-color: rgb(245,245,245);
 	margin-left: 7rem;
@@ -288,7 +288,7 @@ ________________________________________________________________________________
 	padding-bottom: 3rem;
 
 	width: 20rem;
-	height: 50rem;
+	height: 60rem;
 	border: 0.5px solid rgb(124,147,157);
 	background-color: rgb(245,245,245);
 }
@@ -435,7 +435,7 @@ ________________________________________________________________________________
 _________________________________________________________________________________ */
 .shop-titles{
 	width: 100%;
-	
+
 }
 
 .shop-titles h4 {
